<resources>
    <string name="app_name">Wallz</string>
    <string name="app_name_l">l</string>
    <string name="app_name_w">W</string>
    <string name="app_name_a">a</string>
    <string name="app_name_z">z</string>
    <string name="app_name_space"> </string>
    <string name="high_score">High Score: </string>
    <string name="action_settings">Settings</string>
    <string name="continue_button">Continue</string>
    <string name="share_button">Share the fun!</string>
    <string name="leaderboard_button">How do you stack up?</string>
    <string name="last_score">Last Score:</string>
    <string name="youtube_string">YouTube Channel:</string>
    <string name="youtube_description_string"><a href = "https://www.youtube.com/channel/UCLYpeISIqRoSc0fO7czYWIQ?view_as=subscriber"> Software, ComSci, Life.</a></string>
    <string name="twitch_string">Follow me on Twitch: </string>
    <string name="twitch_description_string"><a href = "https://www.twitch.tv/potaten2015">Potaten2015</a></string>
    <string name="share_string"><a href = "https://play.google.com/store/apps/details?id=com.potaten2015.wallz">Wallz</a></string>
    <string name="leaderboard_id">CgkI38LKodUdEAIQAQ</string>


</resources>
